--- a/Desafios/d012 - segundo projeto/index.html
+++ b/Desafios/d012 - segundo projeto/index.html
@@ -14,7 +14,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
     </header>
 
-    <section> <!--Partes do cordel-->
+    <section class="normal"> <!--Partes do cordel-->
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -26,7 +26,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -38,7 +38,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -60,7 +60,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -72,7 +72,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
