--- a/Exercicios/Ex019 - Imagens de fundo/pratica.html
+++ b/Exercicios/Ex019 - Imagens de fundo/pratica.html
@@ -49,7 +49,7 @@
             text-decoration: underline;
         }
         #conteudo{
-            background: yellow url('https://ctl.s6img.com/society6/img/5uFHiOtud7B5teZ02cp0Mo5O_FY/w_700/prints/~artwork/s6-original-art-uploads/society6/uploads/misc/07c252f2a6f04364ab7d484376e803be/~~/calico-cat1907816-prints.jpg') center center no-repeat fixed;
+            background: yellow url('https://ctl.s6img.com/society6/img/5uFHiOtud7B5teZ02cp0Mo5O_FY/w_700/prints/~artwork/s6-original-art-uploads/society6/uploads/misc/07c252f2a6f04364ab7d484376e803be/~~/calico-cat1907816-prints.jpg') center center no-repeat scroll;
             background-size: cover;
             border-radius: 10px;
             height: 200px;
