--- a/Exercicios/Ex020 - tabelas/tabela-teste.html
+++ b/Exercicios/Ex020 - tabelas/tabela-teste.html
@@ -4,9 +4,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela de teste</title>
+    <title>Os melhores IDHs do mundo</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <h1>Tabela com países</h1>
+
+    <table> <!--Cabeça da tabela-->
+        <tr> 
+            <td id="titulo">Países com o melhor IDH</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr> <!--Primeira linha-->
+            <td>Posição</td>
+            <td>País</td>
+            <td class="flag">🚩</td>
+            <td class="flag">IHD</td>
+        </tr>
+        <tr>
+            <td>1°</td>
+            <td>Suíça</td>
+            <td class="flag">🇨🇭</td>
+            <td class="flag">0,962</td>
+        </tr>
+        <tr>
+            <td>2°</td>
+            <td>Noruega</td>
+            <td class="flag">🇳🇴</td>
+            <td class="flag">0,961</td>
+        </tr>
+        <tr>
+            <td>3°</td>
+            <td>Islândia</td>
+            <td class="flag">🇮🇸</td>
+            <td class="flag">0,959</td>
+        </tr>
+        <tr>
+            <td>4°</td>
+            <td>Hong Kong</td>
+            <td class="flag">🇭🇰</td>
+            <td class="flag">0,952</td>
+        </tr>
+        <tr>
+            <td>5°</td>
+            <td>Austrália</td>
+            <td class="flag">🇦🇺</td>
+            <td class="flag">0,951</td>
+        </tr>
+        <tr>
+            <td>6°</td>
+            <td>Dinamarca</td>
+            <td class="flag">🇩🇰</td>
+            <td class="flag">0,948</td>
+        </tr>
+        <tr>
+            <td>7°</td>
+            <td>Suécia</td>
+            <td class="flag">🇸🇪</td>
+            <td class="flag">0,947</td>
+        </tr>
+        <tr>
+            <td>8°</td>
+            <td>Irlanda</td>
+            <td class="flag">🇮🇪</td>
+            <td class="flag">0,945</td>
+        </tr>
+        <tr>
+            <td>9°</td>
+            <td>Alemanha</td>
+            <td class="flag">🇩🇪</td>
+            <td class="flag">0,942</td>
+        </tr>
+        <tr>
+            <td>10°</td>
+            <td>Holanda</td>
+            <td class="flag">🇳🇱</td>
+            <td class="flag">0,941</td>
+        </tr>
+    </table>
 </body>
 </html>
