--- a/Exercicios/Ex012 - teste com cores/index.html
+++ b/Exercicios/Ex012 - teste com cores/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Vamos fazer um teste de degradê</h1>
 
-    <p>Na minha página de css vou criar uma estilização para o background da página com um degrade &#x1F603;</p>
+    <p>Na minha página de css vou criar uma estilização para o background da página com um degradê &#x1F603;</p>
 
     <h2>Menu:</h2>
     <ul></ul>
