--- a/Exercicios/Ex020 - tabelas/tabela-teste.html
+++ b/Exercicios/Ex020 - tabelas/tabela-teste.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Os melhores IDHs do mundo</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="Imagens/Planeta.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Tabela com países</h1>
