--- a/Exercicios/Ex020 - tabelas/tabela-teste.html
+++ b/Exercicios/Ex020 - tabelas/tabela-teste.html
@@ -9,81 +9,105 @@
     <link rel="shortcut icon" href="Imagens/Planeta.ico" type="image/x-icon">
 </head>
 <body>
-    <h1>Tabela com países</h1>
+    <header> <!--Cabeçalho do site-->
+        <h1>O mundo hoje!</h1>
 
-    <table> <!--Cabeça da tabela-->
-        <tr> 
-            <td id="titulo">Países com o melhor IDH</td>
-        </tr>
-    </table>
+        <p>Descubra um pouco mais sobre o mundo navegando pelo site &#x1FA90;</p>
 
-    <table>
-        <tr> <!--Primeira linha-->
-            <td>Posição</td>
-            <td>País</td>
-            <td class="flag">🚩</td>
-            <td class="flag">IHD</td>
-        </tr>
-        <tr>
-            <td>1°</td>
-            <td>Suíça</td>
-            <td class="flag">🇨🇭</td>
-            <td class="flag">0,962</td>
-        </tr>
-        <tr>
-            <td>2°</td>
-            <td>Noruega</td>
-            <td class="flag">🇳🇴</td>
-            <td class="flag">0,961</td>
-        </tr>
-        <tr>
-            <td>3°</td>
-            <td>Islândia</td>
-            <td class="flag">🇮🇸</td>
-            <td class="flag">0,959</td>
-        </tr>
-        <tr>
-            <td>4°</td>
-            <td>Hong Kong</td>
-            <td class="flag">🇭🇰</td>
-            <td class="flag">0,952</td>
-        </tr>
-        <tr>
-            <td>5°</td>
-            <td>Austrália</td>
-            <td class="flag">🇦🇺</td>
-            <td class="flag">0,951</td>
-        </tr>
-        <tr>
-            <td>6°</td>
-            <td>Dinamarca</td>
-            <td class="flag">🇩🇰</td>
-            <td class="flag">0,948</td>
-        </tr>
-        <tr>
-            <td>7°</td>
-            <td>Suécia</td>
-            <td class="flag">🇸🇪</td>
-            <td class="flag">0,947</td>
-        </tr>
-        <tr>
-            <td>8°</td>
-            <td>Irlanda</td>
-            <td class="flag">🇮🇪</td>
-            <td class="flag">0,945</td>
-        </tr>
-        <tr>
-            <td>9°</td>
-            <td>Alemanha</td>
-            <td class="flag">🇩🇪</td>
-            <td class="flag">0,942</td>
-        </tr>
-        <tr>
-            <td>10°</td>
-            <td>Holanda</td>
-            <td class="flag">🇳🇱</td>
-            <td class="flag">0,941</td>
-        </tr>
-    </table>
+        <nav> <!--Menu de navegação-->
+            <a href="#">Contato</a>
+            <a href="#">Home</a>
+            <a href="#">Mais conteúdo</a>
+        </nav>
+    </header>
+
+    <main> <!--Área do meio do site-->
+        <section> <!--Conteúdo principal-->
+            <h1>Veja o índice de desenvolvimento humano de outros países</h1>
+
+            <h2>Mas o que é o IDH?</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate harum iure ut exercitationem architecto facilis fuga recusandae deserunt ab error inventore natus labore quia aliquid reprehenderit, quidem perspiciatis, incidunt rerum.</p>
+
+            <article> <!--Caixa interna para tabela-->
+
+                <h1>Top 10 países com melhor IDH</h1>
+
+                <table>
+                    <tr> <!--Primeira linha-->
+                        <td>Posição</td>
+                        <td>País</td>
+                        <td class="flag">🚩</td>
+                        <td class="flag">IHD</td>
+                    </tr>
+                    <tr>
+                        <td>1°</td>
+                        <td>Suíça</td>
+                        <td class="flag">🇨🇭</td>
+                        <td class="flag">0,962</td>
+                    </tr>
+                    <tr>
+                        <td>2°</td>
+                        <td>Noruega</td>
+                        <td class="flag">🇳🇴</td>
+                        <td class="flag">0,961</td>
+                    </tr>
+                    <tr>
+                        <td>3°</td>
+                        <td>Islândia</td>
+                        <td class="flag">🇮🇸</td>
+                        <td class="flag">0,959</td>
+                    </tr>
+                    <tr>
+                        <td>4°</td>
+                        <td>Hong Kong</td>
+                        <td class="flag">🇭🇰</td>
+                        <td class="flag">0,952</td>
+                    </tr>
+                    <tr>
+                        <td>5°</td>
+                        <td>Austrália</td>
+                        <td class="flag">🇦🇺</td>
+                        <td class="flag">0,951</td>
+                    </tr>
+                    <tr>
+                        <td>6°</td>
+                        <td>Dinamarca</td>
+                        <td class="flag">🇩🇰</td>
+                        <td class="flag">0,948</td>
+                    </tr>
+                    <tr>
+                        <td>7°</td>
+                        <td>Suécia</td>
+                        <td class="flag">🇸🇪</td>
+                        <td class="flag">0,947</td>
+                    </tr>
+                    <tr>
+                        <td>8°</td>
+                        <td>Irlanda</td>
+                        <td class="flag">🇮🇪</td>
+                        <td class="flag">0,945</td>
+                    </tr>
+                    <tr>
+                        <td>9°</td>
+                        <td>Alemanha</td>
+                        <td class="flag">🇩🇪</td>
+                        <td class="flag">0,942</td>
+                    </tr>
+                    <tr>
+                        <td>10°</td>
+                        <td>Holanda</td>
+                        <td class="flag">🇳🇱</td>
+                        <td class="flag">0,941</td>
+                    </tr>
+                </table>
+            </article>
+       </section>
+
+    </main>
+
+    <footer> <!--Rodapé do site-->
+        <p>Site criado por <a href="#" target="_blank" rel="external">Gabriel Trovalim</a>.</p>
+    </footer>
 </body>
 </html>
