melhorando as tabelas

--- a/Exercicios/Ex020 - tabelas/tabela003.html
+++ b/Exercicios/Ex020 - tabelas/tabela003.html
@@ -12,6 +12,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         caption{
             font-size: 1.5em;
@@ -30,8 +31,16 @@
             background-color: #383838;
             color: white;
         }
+        thead > tr > th{
+            position: sticky;
+            top: 0;
+            background-color: #383838;
+        }
         .pop{ /*Em thead*/
             width: 50px;
+        }
+        tbody tr:nth-child(2n){
+            background-color: lightgray;
         }
     </style>
 </head>
@@ -100,5 +109,19 @@
         </tfoot>
 
     </table>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, cupiditate facilis modi hic at necessitatibus autem fuga voluptas! Aspernatur natus modi voluptates facere reprehenderit ullam porro non voluptatum nihil officiis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt, laboriosam eos rerum doloribus quasi illo alias harum, ea voluptatum molestiae! Doloremque totam quaerat at non pariatur enim tempora magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sequi deserunt deleniti perferendis nihil, ad exercitationem laborum quo unde atque quod excepturi eligendi libero cum est iure ducimus, sed doloremque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto maiores doloremque dolores dignissimos, qui voluptatum ut aspernatur doloribus recusandae ex, quos sunt expedita, eius nobis illo laudantium sint vero minus.</p>
 </body>
 </html>
