--- a/Exercicios/Ex020 - tabelas/tabela007.html
+++ b/Exercicios/Ex020 - tabelas/tabela007.html
@@ -24,30 +24,143 @@
         tr:nth-child(even){
             background-color: rgb(228, 228, 228);
         }
+        #container{
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
     <h1>Tabelas em telas pequenas</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur nesciunt dolorem in doloremque, dignissimos commodi voluptas voluptatum cupiditate culpa officiis! Expedita, explicabo iusto. Amet similique ipsum sunt quod illo! Blanditiis?</p>
 
-    <table>
-        <caption>Tabelas responsivas</caption>
-
-        <tr>
-            <th>Produto</th>
-            <th>Jan</th>
-            <th>Fev</th>
-            <Th>Mar</Th>
-            <th>Abr</th>
-            <th>Mai</th>
-            <th>Jun</th>
-            <th>Jul</th>
-            <th>Ago</th>
-            <th>Set</th>
-            <th>Out</th>
-            <th>Nov</th>
-            <th>Dez</th>
-        </tr>
-    </table>
+    <div id="Container">
+        <table>
+            <caption>Tabelas responsivas</caption>
+            <thead>
+                <tr>
+                    <th>Produto</th>
+                    <th>Jan</th>
+                    <th>Fev</th>
+                    <Th>Mar</Th>
+                    <th>Abr</th>
+                    <th>Mai</th>
+                    <th>Jun</th>
+                    <th>Jul</th>
+                    <th>Ago</th>
+                    <th>Set</th>
+                    <th>Out</th>
+                    <th>Nov</th>
+                    <th>Dez</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr> <!--Priemira linha-->
+                    <td>TV 40"</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+                <tr> <!--Segunda linha-->
+                    <td>Home Theater</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+                <tr> <!--Terceira linha-->
+                    <td>Samsung galaxy S20</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+                <tr> <!--Quarta linha-->
+                    <td>iPad Mini</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+                <tr> <!--Quinta linha-->
+                    <td>PlayStation 5</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+                <tr> <!--Sexta linha-->
+                    <td>Lava louças</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+                <tr> <!--Sétima linha-->
+                    <td>Amazon Echo</td>
+                    <td>01</td>
+                    <td>04</td>
+                    <td>07</td>
+                    <td>10</td>
+                    <td>11</td>
+                    <td>56</td>
+                    <td>12</td>
+                    <td>02</td>
+                    <td>03</td>
+                    <td>09</td>
+                    <td>19</td>
+                    <td>15</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
