--- a/Exercicios/Ex020 - tabelas/tabela007.html
+++ b/Exercicios/Ex020 - tabelas/tabela007.html
@@ -33,7 +33,7 @@
     <h1>Tabelas em telas pequenas</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur nesciunt dolorem in doloremque, dignissimos commodi voluptas voluptatum cupiditate culpa officiis! Expedita, explicabo iusto. Amet similique ipsum sunt quod illo! Blanditiis?</p>
 
-    <div id="Container">
+    <div id="container">
         <table>
             <caption>Tabelas responsivas</caption>
             <thead>
