--- a/Projetos pessoais/002/proj-tabela.html
+++ b/Projetos pessoais/002/proj-tabela.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Tabela</title>
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="imagens/Planeta.ico" type="image/x-icon">
 </head>
 <body>
     <header> <!--Cabeçalho do site-->
@@ -21,29 +22,23 @@
         <a href="#">Notícias</a>
     </nav>
 
-    <main> <!--Conteúdo-->
+    <div id="espaco"> <!--Espaço entre a tela e o conteúdo-->
+        <main> <!--Conteúdo-->
+            <h1>Veja o índice de desenvolvimento humano de outros países</h1>
+            <article>
 
-        <h1>Veja o índice de desenvolvimento humano de outros países</h1>
+                <h2>Mas o que é o IDH? &#x1F914;</h2>
 
-        <article>
-            <h2>Mas o que é o IDH? &#x1F914;</h2>
-
-            <p>O Índice de Desenvolvimento Humano (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de zero a um e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o Brasil pela primeira vez alcançou o nível 0,80, passando a integrar o grupo de países com IDH elevado. Países com IDH até 0,499 são considerados de desenvolvimento humano baixo, e os com índices entre 0,50 e 0,799 são considerados de desenvolvimento humano médio. <br>
-            
-            <div class="dado">
-                Fonte: <a href="https://www.ipea.gov.br/desafios/index.php?option=com_content&id=2144:catid=28" target="_blank" rel="external">Ipea</a>(Site). <br>
-                Por Jorge Luiz de Souza.
-            </div>
-            </p>
-        </article>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis iure aspernatur amet maxime! Quasi, perspiciatis. Placeat velit sequi libero dolorum possimus perferendis, voluptas error ratione voluptates. Id, corporis placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, eveniet? Eos, quam harum ipsum voluptates, laboriosam aut sit nesciunt commodi consequatur molestias atque cum maiores quae, facilis at necessitatibus optio.</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis iure aspernatur amet maxime! Quasi, perspiciatis. Placeat velit sequi libero dolorum possimus perferendis, voluptas error ratione voluptates. Id, corporis placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, eveniet? Eos, quam harum ipsum voluptates, laboriosam aut sit nesciunt commodi consequatur molestias atque cum maiores quae, facilis at necessitatibus optio.</p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis iure aspernatur amet maxime! Quasi, perspiciatis. Placeat velit sequi libero dolorum possimus perferendis, voluptas error ratione voluptates. Id, corporis placeat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, eveniet? Eos, quam harum ipsum voluptates, laboriosam aut sit nesciunt commodi consequatur molestias atque cum maiores quae, facilis at necessitatibus optio.</p>
-
-    </main>
+                <p>O Índice de Desenvolvimento Humano (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de zero a um e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o Brasil pela primeira vez alcançou o nível 0,80, passando a integrar o grupo de países com IDH elevado. Países com IDH até 0,499 são considerados de desenvolvimento humano baixo, e os com índices entre 0,50 e 0,799 são considerados de desenvolvimento humano médio. <br>
+        
+                <div class="dado">
+                    Fonte: <a href="https://www.ipea.gov.br/desafios/index.php?option=com_content&id=2144:catid=28" target="_blank" rel="external">Ipea</a>(Site). <br>
+                    Por Jorge Luiz de Souza.
+                </div>
+                </p>
+            </article>
+        </main>
+    </div>
 
     <footer> <!--Rodapé-->
         <p>Criado por <a href="#">Gabriel Trovalim</a>.</p>
