--- a/Projetos pessoais/002/proj-tabela.html
+++ b/Projetos pessoais/002/proj-tabela.html
@@ -12,7 +12,7 @@
     <header> <!--Cabeçalho do site-->
         <h1>O mundo Hoje</h1>
 
-        <p>Descubra um pouco mais sobre o mundo navegando pelo site. &#x1FA90;</p>
+        <p>Descubra um pouco mais sobre o mundo navegando pelo site. &#x1F30E;</p>
 
     </header>
 
