--- a/Projetos pessoais/002/proj-tabela.html
+++ b/Projetos pessoais/002/proj-tabela.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="imagens/Planeta.ico" type="image/x-icon">
 </head>
 <body>
+
     <header> <!--Cabeçalho do site-->
         <h1>O mundo Hoje</h1>
 
@@ -22,26 +23,43 @@
         <a href="#">Notícias</a>
     </nav>
 
-    <div id="espaco"> <!--Espaço entre a tela e o conteúdo-->
+    <div id="espaco"> <!--Configuração de espaço interno-->
         <main> <!--Conteúdo-->
-            <h1>Veja o índice de desenvolvimento humano de outros países</h1>
+            <h1 class="text">Veja o índice de desenvolvimento humano de outros países</h1>
             <article>
-
                 <h2>Mas o que é o IDH? &#x1F914;</h2>
-
-                <p>O Índice de Desenvolvimento Humano (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de zero a um e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o Brasil pela primeira vez alcançou o nível 0,80, passando a integrar o grupo de países com IDH elevado. Países com IDH até 0,499 são considerados de desenvolvimento humano baixo, e os com índices entre 0,50 e 0,799 são considerados de desenvolvimento humano médio. <br>
+                <p>O Índice de Desenvolvimento Humano (IDH) compara indicadores de países nos itens riqueza, alfabetização, educação, esperança de vida, natalidade e outros, com o intuito de avaliar o bem-estar de uma população, especialmente das crianças. Varia de zero a um e é divulgado pelo Programa das Nações Unidas para o Desenvolvimento (<a href="https://www.undp.org/pt/brazil" class="link" target="_blank" rel="external">Pnud</a>) em seu relatório anual. Na divulgação feita em novembro de 2007, com dados referentes a 2005, o Brasil pela primeira vez alcançou o nível 0,80, passando a integrar o grupo de países com IDH elevado. Países com IDH até 0,499 são considerados de desenvolvimento humano baixo, e os com índices entre 0,50 e 0,799 são considerados de desenvolvimento humano médio. <br>
         
                 <div class="dado">
-                    Fonte: <a href="https://www.ipea.gov.br/desafios/index.php?option=com_content&id=2144:catid=28" target="_blank" rel="external">Ipea</a>(Site). <br>
+                    Fonte: <a href="https://www.ipea.gov.br/desafios/index.php?option=com_content&id=2144:catid=28" class="link" target="_blank" rel="external">Ipea</a>(Site). <br>
                     Por Jorge Luiz de Souza.
                 </div>
                 </p>
             </article>
+
+            <table> <!--Tabela dos países-->
+                <caption> <!--Legenda da tabela-->
+                    Top 10 países com melhor IDH no mundo
+                </caption>
+
+                <thead> <!--Cabeça da tabela-->
+                    <tr>
+                        <th>Posição</th>
+                        <th>País</th>
+                        <th></th>
+                    </tr>
+                </thead>
+
+                <tbody> <!--Corpo da tabela-->
+
+                </tbody>
+            </table>
         </main>
     </div>
 
     <footer> <!--Rodapé-->
         <p>Criado por <a href="#">Gabriel Trovalim</a>.</p>
     </footer>
+
 </body>
 </html>
