Atualização para tabela

--- a/Projetos pessoais/002/proj-tabela.html
+++ b/Projetos pessoais/002/proj-tabela.html
@@ -38,20 +38,92 @@
             </article>
 
             <table> <!--Tabela dos países-->
+
                 <caption> <!--Legenda da tabela-->
                     Top 10 países com melhor IDH no mundo
                 </caption>
 
                 <thead> <!--Cabeça da tabela-->
                     <tr>
-                        <th>Posição</th>
-                        <th>País</th>
-                        <th></th>
+                        <th scope="col">Posição</th>
+                        <th scope="col">País</th>
+                        <th scope="col">🚩</th>
+                        <th scope="col">IDH</th>
+                        <th scope="col">PIB per capita</th>
                     </tr>
                 </thead>
 
                 <tbody> <!--Corpo da tabela-->
-
+                    <tr>
+                        <td>1°</td>
+                        <td>Noruega</td>
+                        <td>🇳🇴</td>
+                        <td>0,954</td>
+                        <td>USD$ 68.012</td>
+                    </tr>
+                    <tr>
+                        <td>2°</td>
+                        <td>Suíça</td>
+                        <td>🇨🇭</td>
+                        <td>0,946</td>
+                        <td>USD$ 57.625</td> 
+                    </tr>
+                    <tr>
+                        <td>3°</td>
+                        <td>Irlanda</td>
+                        <td>🇮🇪</td>
+                        <td>0,942</td>
+                        <td>USD$ 53.754</td> 
+                    </tr>
+                    <tr>
+                        <td>4°</td>
+                        <td>Alemanha</td>
+                        <td>🇩🇪</td>
+                        <td>0,939</td>
+                        <td>USD$ 46.136</td> 
+                    </tr>
+                    <tr>
+                        <td>5°</td>
+                        <td>Hong Kong (China)</td>
+                        <td>🇭🇰</td>
+                        <td>0,939</td>
+                        <td>USD$ 58.420</td> 
+                    </tr>
+                    <tr>
+                        <td>6°</td>
+                        <td>Austrália</td>
+                        <td>🇦🇺</td>
+                        <td>0,938</td>
+                        <td>USD$ 43.560</td> 
+                    </tr>
+                    <tr>
+                        <td>7°</td>
+                        <td>Islândia</td>
+                        <td>🇮🇸</td>
+                        <td>0,938</td>
+                        <td>USD$ 45.810</td> 
+                    </tr>
+                    <tr>
+                        <td>8°</td>
+                        <td>Suécia</td>
+                        <td>🇸🇪</td>
+                        <td>0,937</td>
+                        <td>USD$ 47.766</td> 
+                    </tr>
+                    <tr>
+                        <td>9°</td>
+                        <td>Singapura</td>
+                        <td>🇸🇬</td>
+                        <td>0,935</td>
+                        <td>USD$ 82.503</td> 
+                    </tr>
+                    <tr>
+                        <td>10°</td>
+                        <td>Holanda</td>
+                        <td>🇳🇱</td>
+                        <td>0,933</td>
+                        <td>USD$ 47.900</td> 
+                    </tr>
                 </tbody>
             </table>
         </main>
